# impisc

./: .gitignore  .gitmodules  CONTRIBUTING.md  pyproject.toml  readme.md
cprogs/: arbitrary_command.c
deployment/: 01-impish.yaml  90-spi.rules  99-i2c-permissions.rules  cleanup  config.txt  configure_journal  configure_network  configure_rtc  configure_sd1  configure_system_config  configure_system_python_env  create_cleanup_script  disable_swap  enp1s0-link-down  excluded_services.txt  install_edge_detector  install_networkd_hooks  install_required_programs  install_rust_progs  install_scripts  install_services  journald.conf  oneshot_deploy  process_names.txt  remove_bloat  script_names.txt  service_names.txt  services_to_enable.txt  setup_directories  setup_timesyncd
edge-detector/: CMakeLists.txt  readme.md
ground/: command_gui.py  commander.qss  discriminator.py  fake_grips.py  ground_ports.py  launch_support.py  readme.md  support.py  telemetry_sorter.py
ground_station/: pyproject.toml
ground_station/deployment/: configure_bashrc  configure_grafana  configure_system_python_env  grafana-server.service  impish.yaml  install_grafana  install_mysql  install_scripts  install_services  install_systemd-journal-remote  oneshot_deploy
ground_station/impish_monitor/: __init__.py  initialize_database.py  reset_database.py  reset_table.py
ground_station/processes/: command_forwarder  command_listener  download_dashboards  health_listener  journal_listener  packet_sorter  quicklook_listener  rtd_listener  temperature_listener
ground_station/remote_journal/: config.alloy  systemd-journal-remote.service
ground_station/scripts/: cmdrb  cmdresp  cresponse_builder  download_dashboards  health_listen  initialize_database  push_dashboards  remote_journal_flush  reset_table
ground_station/services/: command-forwarder.service  command-listener.service  dashboard-backup.service  dashboard-backup.timer  gs-variables.env  health-listen.service  health-listener.service  journal-listener.service  packet-sorter.service  quicklook-listener.service  rtd-listener.service  temperature-listener.service  variables.env
impisc/: logging.py  packets.py  test.ipynb
processes/: command_router  header_stamper  health_monitor  heater_controller  quicklook_monitor  quicklooker  rtd_monitor  science_control  starspec_forwarder  telemeter  temperature_monitor
relay/: pyproject.toml  readme.md  run
relay/receiver/: pyproject.toml  run
relay/receiver/receiver/: main.py
relay/sender/: pyproject.toml  run
relay/sender/sender/: main.py
rust/: .gitignore  Cargo.toml  command_executor.rs  readme.md  tester.py
rust/command-executor/: readme.md
rust/command_executor/: Cargo.toml  readme.md
rust/command_executor/src/: main.rs
rust/daqbox-rebinner/: Cargo.toml  readme.md
rust/daqbox-rebinner/src/: main.rs
rust/quicklooker/: Cargo.toml  test.py
rust/quicklooker/src/: main.rs
rust/udpcapture/: Cargo.toml  readme.md
rust/udpcapture/src/: args.rs  main.rs  writer.rs
scripts/: boot-count  debug_daqbox  debug_daqbox_spectrum  debug_daqbox_waveform  gpio_toggles  initialize_gpio_ownership  initialize_gpiomem  initialize_gpios  journal_flush  journal_send  power_on_science  (+29 more)
(+117 files in other folders)
