[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    'impisc',
    'impisc.network',
    'impisc.i2c',
    'impisc.i2c.devices',
]

[project]
version = "0"
name = "impisc"
dependencies = [
    "smbus2"
]

[project.scripts]
