[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    'scripts',
    'impisc',
    'impisc.et_daqbox',
    'impisc.i2c',
    'impisc.i2c.devices',
]

[project]
version = "0"
name = "impisc"
dependencies = [
    "smbus2"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[project.scripts]
set-bias = "scripts:set_bias.main"
set-pps = "scripts:set_pps.main"