[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    'scripts',
    'impisc',
    'impisc.et_daqbox',
    'impisc.i2c',
    'impisc.i2c.devices',
]

[project]
version = "0"
name = "impisc"
dependencies = [
    "psutil>=7.2.2",
    "smbus2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]
