[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "impish_monitor",
]

[project]
version = "0"
name = "impish_monitor"
dependencies = [
    "mysql-connector-python"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]