[package]
name = "impish-executables"
version = "1.1.0"
edition = "2024"
autobins = true

[[bin]]
name = "udpcapture"
[[bin]]
name = "command-executor"
[[bin]]
name = "daqbox-rebinner"

[dependencies]
chrono = { version = ">=0.4.38", features = ["unstable-locales"] }
clap = { version = ">=4.5.17", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"