[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "receiver"
]

[project]
version = "0"
name = "receiver"
dependencies=[
    "relay @ file:///home/impish/relay"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]