[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "sender"
]

[project]
version = "0"
name = "sender"
dependencies=[
    "relay @ file:///home/impish/relay"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]